--- a/netty-learning/pom.xml
+++ b/netty-learning/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>netty-learning</artifactId>
 
+
+    <dependencies>
+        <!--netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+    </dependencies>
 </project>
