--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dubbo-starter.version>2.7.3</dubbo-starter.version>
         <zookeeper.version>3.5.6</zookeeper.version>
         <curator.version>3.3.0</curator.version>
-        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+<!--        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>-->
         <swagger.version>2.9.2</swagger.version>
         <openjdk-jol.version>0.10</openjdk-jol.version>
         <cglib.version>3.3.0</cglib.version>
@@ -56,15 +56,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--SpringCloud-->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <!--netty-->
             <dependency>
                 <groupId>io.netty</groupId>
@@ -177,18 +168,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <!--    <build>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-    <!--                <version>3.1</version>-->
-    <!--                <configuration>-->
-    <!--                    <source>11</source>-->
-    <!--                    <target>11</target>-->
-    <!--                </configuration>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </build>-->
 </project>
