增加&修改:mybatis对于pgsql测试部分&spring传播行为部分

--- a/orm-learning/pom.xml
+++ b/orm-learning/pom.xml
@@ -24,5 +24,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <!--postgresql-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 </project>
